--- a/app/src/main/res/layout/item_recyclerhomecategory.xml
+++ b/app/src/main/res/layout/item_recyclerhomecategory.xml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageview_categoryicon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="40dp"
-        app:srcCompat="@drawable/ic_dashboard_black_24dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textview_categorydiscount"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignEnd="@+id/imageview_categoryicon"
-        android:layout_alignParentRight="true"
-        android:layout_alignRight="@+id/imageview_categoryicon"
-        android:gravity="center"
-        android:text="50% off"
-        android:textColor="@android:color/holo_red_dark"
-        android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/imageview_categoryicon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="40dp"
+            app:srcCompat="@drawable/ic_dashboard_black_24dp" />
 
-    <TextView
-        android:id="@+id/textview_categoryname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageview_categoryicon"
-        android:layout_centerHorizontal="true"
-        android:text="Category Name" />
+        <TextView
+            android:id="@+id/textview_categorydiscount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/imageview_categoryicon"
+            android:layout_alignParentRight="true"
+            android:layout_alignRight="@+id/imageview_categoryicon"
+            android:gravity="center"
+            android:paddingRight="16dp"
+            android:text="50% off"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textview_categoryname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageview_categoryicon"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"
+            android:text="Category Name" />
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
